<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Menu_EnhanceForMe">Enhance For Me!</string>
    <string name="GPREF_CAPTURE_CUSTOM_OPTIONS_NONE">None</string>
    <string name="GPREF_CAPTURE_CUSTOM_OPTIONS_EXTEND">Extend</string>
    <string name="GPREF_CAPTURE_CUSTOM_OPTIONS_REPLACE">Replace</string>
    <string-array name="GPREF_CAPTURE_CUSTOM_OPTIONS_VALUES">
        <item>@string/GPREF_CAPTURE_CUSTOM_OPTIONS_NONE</item>
        <item>@string/GPREF_CAPTURE_CUSTOM_OPTIONS_EXTEND</item>
        <item>@string/GPREF_CAPTURE_CUSTOM_OPTIONS_REPLACE</item>
    </string-array>
    <string name="Menu_QuadCrop">Quad Crop</string>
    <string name="URI">URI Address</string>
    <string name="URI_TITLE">Server Address</string>
    <string name="URI_SUMMARY">Connection to the Captiva Server</string>
    <string name="account_name">Default Account Name</string>
    <string name="account_name_title">Default Account Name</string>
    <string name="account_name_summary">Account Name Folder in Banking Application</string>
    <string name="customer_name">Default Customer Name</string>
    <string name="customer_name_title">Default Customer Name</string>
    <string name="customer_name_summary">Customer Name Folder in Banking Application</string>
    <string name="RESULTS_URI">Results URI Address</string>
    <string name="RESULTS_URI_TITLE">Results Server Address</string>
    <string name="RESULTS_URI_SUMMARY">Connection to the Results Server</string>
    <string name="XCP_BPS_URI">xCP BPS URI Address</string>
    <string name="XCP_BPS_URI_TITLE">xCP BPS URI Address</string>
    <string name="XCP_BPS_URI_SUMMARY">Connection to the xCP BPS Server</string>
    <string name="app_name">ING RBI POC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_username">User Name</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_uri">URI</string>
    <string name="lbl_connect">Connect</string>
    <string name="title_activity_resolve_connection">ResolveConnection</string>
    <string name="default_uri">http:fsi-ccp-emea-demo.spdns.org</string>
    <string name="default_user">Gareth</string>
    <string name="default_password">password</string>
    <string name="login_message">Test</string>
    <string name="title_activity_create_batch">CreateBatch</string>
    <string name="CaptureFlowPrompt">Select Document Type</string>
    <string name="CreateBatchButton">Create</string>
    <string name="No_Capture_Flow_Selected">No Document Type Selected</string>
    <string name="SelectCaptureFlow">Select Document Type</string>
    <string name="OK">OK</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_string" />
    <string name="title_activity_add_cheque">AddCheque</string>
    <string name="Cheque_Value">Cheque Value</string>
    <string name="Bill_Value">Bill Value</string>
    <string name="Add_Bill">Pay Bill</string>
    <string name="Bill_Reference">Bill Reference</string>
    <string name="take_picture">Take Picture</string>
    <string name="GPREF_CAPTURE_GROUP">GPREF_CAPTURE_GROUP</string>
    <string name="GPREF_CAPTURE_GROUP_TITLE">Capture Settings</string>
    <string name="GPREF_EDGELABEL">GPREF_EDGELABEL</string>
    <string name="GPREF_EDGELABEL_TITLE">Edge Label</string>
    <string name="GPREF_EDGELABEL_SUMMARY">Display text on the edge of the camera window.</string>
    <string name="GPREF_CENTERLABEL">GPREF_CENTERLABEL</string>
    <string name="GPREF_CENTERLABEL_TITLE">Center Label</string>
    <string name="GPREF_CENTERLABEL_SUMMARY">Display text in the center of the camera window.</string>
    <string name="GPREF_CAPTURINGLABEL">GPREF_CAPTURINGLABEL</string>
    <string name="GPREF_CAPTURINGLABEL_TITLE">Capturing Label</string>
    <string name="GPREF_CAPTURINGLABEL_SUMMARY">The text to display during the capturing phase.</string>
    <string name="GPREF_SENSOR_LIGHT">GPREF_SENSOR_LIGHT</string>
    <string name="GPREF_SENSOR_LIGHT_TITLE">Use Light Sensor</string>
    <string name="GPREF_SENSOR_LIGHT_SUMMARY">This will display the light sensor on the capture window (Default is true).</string>
    <string name="GPREF_SENSOR_LIGHT_VALUE">GPREF_SENSOR_LIGHT_VALUE</string>
    <string name="GPREF_SENSOR_LIGHT_VALUE_TITLE">Light Sensitivity</string>
    <string name="GPREF_SENSOR_LIGHT_VALUE_SUMMARY">The is the amount of light needed to satisfy the light sensor. Acceptable integer values are 0 (no light) to 5000 (very bright light). The default is 50.</string>
    <string name="GPREF_SENSOR_MOTION">GPREF_SENSOR_MOTION</string>
    <string name="GPREF_SENSOR_MOTION_TITLE">Use Motion Sensor</string>
    <string name="GPREF_SENSOR_MOTION_SUMMARY">This will display the motion sensor (shared with focus) on the capture window (Default is true).</string>
    <string name="GPREF_SENSOR_MOTION_VALUE">GPREF_SENSOR_MOTION_VALUE</string>
    <string name="GPREF_SENSOR_MOTION_VALUE_TITLE">Motion Sensitivity</string>
    <string name="GPREF_SENSOR_MOTION_VALUE_SUMMARY">This is the amount of motion needed to satisfy the motion sensor. Acceptable float values are 0.0 (absolutely no motion) to 10.0 (large motion allowed). The default is 0.30.</string>
    <string name="GPREF_SENSOR_FOCUS">GPREF_SENSOR_FOCUS</string>
    <string name="GPREF_SENSOR_FOCUS_TITLE">Use Focus Sensor</string>
    <string name="GPREF_SENSOR_FOCUS_SUMMARY">This will display the focus sensor (shared with motion) on the capture window (Default is true).</string>
    <string name="GPREF_GUIDELINES">GPREF_GUIDELINES</string>
    <string name="GPREF_GUIDELINES_TITLE">Display Guidelines</string>
    <string name="GPREF_GUIDELINES_SUMMARY">This will display the guidelines on the capture window.</string>
    <string name="GPREF_CANCEL">GPREF_CANCEL</string>
    <string name="GPREF_CANCEL_TITLE">Display Cancel Button</string>
    <string name="GPREF_CANCEL_SUMMARY">This will display a cancel/back button on the capture window.</string>
    <string name="GPREF_CAPTUREDELAY">GPREF_CAPTUREDELAY</string>
    <string name="GPREF_CAPTUREDELAY_TITLE">Capture Delay</string>
    <string name="GPREF_CAPTUREDELAY_SUMMARY">A positive integer representing the time (ms) to wait after the user selects the capture button. The default value is 500.</string>
    <string name="GPREF_CAPTURETIMEOUT">GPREF_CAPTURETIMEOUT</string>
    <string name="GPREF_CAPTURETIMEOUT_TITLE">Capture Timeout</string>
    <string name="GPREF_CAPTURETIMEOUT_SUMMARY">A positive integer representing the time (ms) to wait for optimal conditions before taking the picture. A value of 0 (default) indicates no wait.</string>
    <string name="GPREF_OPTIMALCONDREQ">GPREF_OPTIMALCONDREQ</string>
    <string name="GPREF_OPTIMALCONDREQ_TITLE">Optimal Conditions Required</string>
    <string name="GPREF_OPTIMALCONDREQ_SUMMARY">This will require any sensors enabled to achieve optimal conditions before capturing can take place.</string>
    <string name="GPREF_IMAGEFORMAT">GPREF_IMAGEFORMAT</string>
    <string name="GPREF_IMAGEFORMAT_TITLE">Image Format for Saving</string>
    <string name="GPREF_IMAGEFORMAT_SUMMARY">Enter the image format you want to use when saving the picture (JPG, PNG, TIFF). Default is JPG.</string>
    <string name="GPREF_JPGQUALITY">GPREF_JPGQUALITY</string>
    <string name="GPREF_JPGQUALITY_TITLE">JPG Quality</string>
    <string name="GPREF_JPGQUALITY_SUMMARY">The compression quality to use when saving JPG or TIFF images. Acceptable values are 0 (poor-max compression) to 100 (Best-no compression). 95 is default.</string>
    <string name="GPREF_DPIX">GPREF_DPIX</string>
    <string name="GPREF_DPIX_TITLE">Fixed DPI X</string>
    <string name="GPREF_DPIX_SUMMARY">If you would like to fix a horizontal DPI resolution when saving an image enter it here. If left blank, then the default behavior will be used.</string>
    <string name="GPREF_DPIY">GPREF_DPIY</string>
    <string name="GPREF_DPIY_TITLE">Fixed DPI Y</string>
    <string name="GPREF_DPIY_SUMMARY">If you would like to fix a vertical DPI resolution when saving an image enter it here. If left blank, then the default behavior will be used.</string>
    <string name="GPREF_FILTER_CROP_PADDING">GPREF_FILTER_CROP_PADDING</string>
    <string name="GPREF_FILTER_CROP_PADDING_TITLE">Autocrop Padding</string>
    <string name="GPREF_FILTER_CROP_PADDING_SUMMARY">Extra padding applied to the image by the autocrop filter.  A value of 0.05 represents 5% padding.  0 is the default.</string>
    <string name="Menu_ImageLabel">Image Label</string>
    <string name="Menu_BlackWhite">Black-White</string>
    <string name="Menu_Gray">Gray</string>
    <string name="Menu_Deskew">Deskew</string>
    <string name="Menu_RotateLeft">Rotate 90°</string>
    <string name="Menu_RotateRight">Rotate Right</string>
    <string name="Menu_Crop">Crop</string>
    <string name="Menu_AutoCrop">Auto Crop</string>
    <string name="Menu_Delete">Delete</string>
    <string name="Menu_GetInfo">Get Information</string>
    <string name="Menu_Resize">Resize</string>
    <string name="Menu_Rotate180">Rotate 180</string>
    <string name="General_Menu">Menu</string>
    <string name="General_NavPrev">&lt; Prev</string>
    <string name="General_NavNext">Next &gt;</string>
    <string name="General_Image">Image</string>
    <string name="General_Done">Done</string>
    <string name="General_Update">Update</string>
    <string name="Button_UndoAll">Undo All</string>
    <string name="Button_CropSubmit">Submit Crop</string>
    <string name="EnhanceImage_Title">Enhance Image</string>
    <string name="ImageInfo_Title">Information</string>
    <string name="ImageInfo_DeviceID">Device ID:  </string>
    <string name="ImageInfo_Width">Image Width:  </string>
    <string name="ImageInfo_Height">Image Height:  </string>
    <string name="ImageInfo_Channels">Image Channels:  </string>
    <string name="ImageInfo_BitsPerPixel">Image Bits Per Pixel:  </string>
    <string name="ImageInfo_Version">Version:  </string>
    <string name="title_activity_cheque_results">ChequeResults</string>
    <string name="title_activity_bill_results">BillResults</string>
    <string name="title_activity_add_pid">AddPID</string>
    <string name="title_activity_pidresults">PIDResults</string>
    <string name="title_activity_add_back_of_cheque">Add Back Of Cheque</string>
    <string name="title_activity_add_second_cheque">Add Second Cheque</string>
    <string name="title_activity_view_documents">View Documents</string>
    <string name="title_activity_create_batch_tabbed">CreateBatchTabbed</string>
    <string name="title_create_new_document">Create New Document</string>
    <string name="capture_flow_types">CaptureFlows</string>
    <string name="cheque_reference">Cheque Reference</string>
    <string-array name="country_array">
        <item></item>
        <item>UK</item>
        <item>Netherlands</item>
        <item>Belgium</item>
        <item>Spain</item>
        <item>Turkey</item>
    </string-array>
    <string-array name="doctype_array">
        <item></item>
        <item>Driver License</item>
        <item>National Identity Document</item>
        <item>Passport</item>
        <item>Invoice/Statement</item>
        <item>Insurance Certificate</item>
        <item>Residence Card</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>
</resources>
