<!--
<Copyright company="EMC Corporation">
    EMC Confidential
    Copyright (c) 2013 EMC Corporation.  All rights reserved.
    This is an UNPUBLISHED work.
</Copyright>
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory 
        android:key="@string/GPREF_CAPTURE_GROUP"
        android:title="@string/GPREF_CAPTURE_GROUP_TITLE"
        >
        <EditTextPreference
            android:key="@string/URI"
            android:title="@string/URI_TITLE"
            android:summary="@string/URI_SUMMARY"
            android:defaultValue="http://fsi-ccp-emea-demo.spdns.org" />
        <EditTextPreference
            android:key="@string/customer_name"
            android:title="@string/customer_name_title"
            android:summary="@string/customer_name_summary"
            android:defaultValue="Gareth Hutchins" />
        <EditTextPreference
            android:key="@string/account_name"
            android:title="@string/account_name_title"
            android:summary="@string/account_name_summary"
            android:defaultValue="Current Account" />
        <EditTextPreference
            android:key="@string/RESULTS_URI"
            android:title="@string/RESULTS_URI_TITLE"
            android:summary="@string/RESULTS_URI_SUMMARY"
            android:defaultValue="http://fsi-ccp2-emea-demo.spdns.org/" />
        <EditTextPreference
            android:key="@string/XCP_BPS_URI"
            android:title="@string/XCP_BPS_URI_TITLE"
            android:summary="@string/XCP_BPS_URI_SUMMARY"
            android:defaultValue="http://fsi-bps-emea-demo.spdns.org//" />
        <EditTextPreference
            android:key="@string/GPREF_EDGELABEL"
            android:title="@string/GPREF_EDGELABEL_TITLE"
            android:summary="@string/GPREF_EDGELABEL_SUMMARY"
            android:defaultValue="" />
        <EditTextPreference
            android:key="@string/GPREF_CENTERLABEL"
            android:title="@string/GPREF_CENTERLABEL_TITLE"
            android:summary="@string/GPREF_CENTERLABEL_SUMMARY"
            android:defaultValue="" />
        <EditTextPreference
            android:key="@string/GPREF_CAPTURINGLABEL"
            android:title="@string/GPREF_CAPTURINGLABEL_TITLE"
            android:summary="@string/GPREF_CAPTURINGLABEL_SUMMARY"
            android:defaultValue="" />
        <CheckBoxPreference
            android:key="@string/GPREF_SENSOR_LIGHT"
            android:title="@string/GPREF_SENSOR_LIGHT_TITLE"
            android:summary="@string/GPREF_SENSOR_LIGHT_SUMMARY"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="@string/GPREF_SENSOR_LIGHT_VALUE"
            android:title="@string/GPREF_SENSOR_LIGHT_VALUE_TITLE"
            android:summary="@string/GPREF_SENSOR_LIGHT_VALUE_SUMMARY"
            android:defaultValue="50" />
        <CheckBoxPreference
            android:key="@string/GPREF_SENSOR_MOTION"
            android:title="@string/GPREF_SENSOR_MOTION_TITLE"
            android:summary="@string/GPREF_SENSOR_MOTION_SUMMARY"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="@string/GPREF_SENSOR_MOTION_VALUE"
            android:title="@string/GPREF_SENSOR_MOTION_VALUE_TITLE"
            android:summary="@string/GPREF_SENSOR_MOTION_VALUE_SUMMARY"
            android:defaultValue=".30" />
        <CheckBoxPreference
            android:key="@string/GPREF_SENSOR_FOCUS"
            android:title="@string/GPREF_SENSOR_FOCUS_TITLE"
            android:summary="@string/GPREF_SENSOR_FOCUS_SUMMARY"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/GPREF_GUIDELINES"
            android:title="@string/GPREF_GUIDELINES_TITLE"
            android:summary="@string/GPREF_GUIDELINES_SUMMARY"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/GPREF_CANCEL"
            android:title="@string/GPREF_CANCEL_TITLE"
            android:summary="@string/GPREF_CANCEL_SUMMARY"
            android:defaultValue="false" />
        <EditTextPreference
            android:key="@string/GPREF_CAPTUREDELAY"
            android:title="@string/GPREF_CAPTUREDELAY_TITLE"
            android:summary="@string/GPREF_CAPTUREDELAY_SUMMARY"
            android:defaultValue="500" />  
        <EditTextPreference
            android:key="@string/GPREF_CAPTURETIMEOUT"
            android:title="@string/GPREF_CAPTURETIMEOUT_TITLE"
            android:summary="@string/GPREF_CAPTURETIMEOUT_SUMMARY"
            android:defaultValue="0" />  
        <CheckBoxPreference
            android:key="@string/GPREF_OPTIMALCONDREQ"
            android:title="@string/GPREF_OPTIMALCONDREQ_TITLE"
            android:summary="@string/GPREF_OPTIMALCONDREQ_SUMMARY"
            android:defaultValue="false" />      
        <EditTextPreference
            android:key="@string/GPREF_IMAGEFORMAT"
            android:title="@string/GPREF_IMAGEFORMAT_TITLE"
            android:summary="@string/GPREF_IMAGEFORMAT_SUMMARY"
            android:defaultValue="JPG" />        
        <EditTextPreference
            android:key="@string/GPREF_JPGQUALITY"
            android:title="@string/GPREF_JPGQUALITY_TITLE"
            android:summary="@string/GPREF_JPGQUALITY_SUMMARY"
            android:defaultValue="95" />
        <EditTextPreference
            android:key="@string/GPREF_DPIX"
            android:title="@string/GPREF_DPIX_TITLE"
            android:summary="@string/GPREF_DPIX_SUMMARY"
            android:defaultValue="" />
        <EditTextPreference
            android:key="@string/GPREF_DPIY"
            android:title="@string/GPREF_DPIY_TITLE"
            android:summary="@string/GPREF_DPIY_SUMMARY"
            android:defaultValue="" />    
        <EditTextPreference
            android:key="@string/GPREF_FILTER_CROP_PADDING"
            android:title="@string/GPREF_FILTER_CROP_PADDING_TITLE"
            android:summary="@string/GPREF_FILTER_CROP_PADDING_SUMMARY"
            android:defaultValue="0.0" />        
    </PreferenceCategory>
</PreferenceScreen>
