<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddCheque" >

    <TextView
        android:id="@+id/lbl_BillReference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/Bill_Reference"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/EMC_blue" />


    <EditText
        android:id="@+id/BillReference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/EMC_blue"
        android:layout_below="@+id/lbl_BillReference"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/BillValue"
        android:layout_alignBottom="@+id/bill_progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btn_take_back_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/EMC_blue"
        android:onClick="onTakePicture"
        android:text="@string/take_picture"
        android:textSize="60dp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="56dp" />

    <TextView
        android:id="@+id/lbl_BillValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BillReference"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Bill_Value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/EMC_blue" />

    <ProgressBar
        android:id="@+id/bill_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lbl_BillValue"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />




</RelativeLayout>



